# github-copilot-upgrading

./: README_ko.md
workshop/: README_ko.md
workshop/upgraded/: pyproject.toml  report.md  setup.py
workshop/upgraded/guachi/guachi.egg-info/: PKG-INFO
workshop/upgraded/guachi/tests/: test_database.py
