[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
authors = [
    { name = "Alfredo Deza", email = "alfredodeza@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["guachi"]
